<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login"
    android:background="@color/white">

    <TextView
        android:id="@+id/showHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PasswordUser"
        android:layout_alignEnd="@+id/PasswordUser"
        android:layout_alignBottom="@+id/PasswordUser"
        android:text="SHOW"
        android:layout_marginStart="256dp"
        android:layout_marginEnd="5dp"
        android:textColor="#7777FF"
        android:layout_marginBottom="15dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:elevation="1dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/corona_logo"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/corona_logo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />

    <RelativeLayout
        android:id="@+id/layoutText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/corona_logo"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/corona"
            android:textColor="#7777FF"
            android:textStyle="bold"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginTop="30dp"
            android:text="@string/virus"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="23sp"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutText2"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/slogan" />


    <EditText
        android:id="@+id/UsernameOrEmail"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:background="@drawable/input_background"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_email_24px"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_below="@+id/corona_logo"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/PasswordUser"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/input_background"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_https_24px"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:layout_below="@+id/UsernameOrEmail"
        android:singleLine="true"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_button"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textSize="21sp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:fontFamily="@font/exo2semibold"
                android:background="@drawable/button_next"
                android:gravity="center" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignEnd="@+id/login_button"
                android:layout_alignBottom="@+id/login_button"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="14dp"
                android:indeterminateTint="@android:color/white"
                android:visibility="gone"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dontHave"
                android:fontFamily="@font/exo2regular"
                android:layout_marginTop="1dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/NewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/Text"
                android:text="@string/Register"
                android:textColor="#7777FF"
                android:fontFamily="@font/exo2regular"
                android:textStyle="bold"
                android:textSize="15.5sp" />

        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>