<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:elevation="5dp"
        android:background="@drawable/form_1">

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout2"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:alpha=".89"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sureLogout"
            android:textSize="14sp"
            android:alpha=".89"
            android:layout_below="@+id/logout"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_below="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/cancel"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:background="@drawable/button_form2"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textColor="#A1A1A1"/>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:background="@drawable/button_form1"
                android:text="@string/Logout1"
                android:textAllCaps="false"
                android:padding="5sp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginEnd="10sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>