<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.onboard.stayHome"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/avoid_6ft"
        android:layout_width="230dp"
        android:layout_height="215dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/path4" >

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/stayhome"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avoid_6ft"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#7777FF"
            android:text="@string/StayAtHome" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/staying" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:text="@string/skip"
            android:textColor="#504F4F"
            android:textSize="18dp" />

        <Button
            android:id="@+id/firstNextButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_next"
            android:fontFamily="@font/exo2semibold"
            android:text="@string/next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

</RelativeLayout>