<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:elevation="5dp"
        android:background="@drawable/form1">

        <TextView
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/enable_gps"
            android:textSize="18dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparent"
            android:layout_below="@id/gps"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:clickable="true"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparent"
            android:layout_below="@id/gps"
            android:layout_marginEnd="5dp"
            android:textSize="15dp"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>