<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsItems.Give_Feedback">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/ic_keyboard_backspace_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:elevation="1dp"
        />

    <TextView
        android:id="@+id/give_feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_feedback"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/backButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:alpha=".89"
        android:textSize="26dp"/>

    <EditText
        android:layout_centerVertical="true"
        android:id="@+id/feedback_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:maxLines="6"
        android:textSize="18sp"
        android:gravity="top"
        android:hint="@string/feedback_write"
        android:background="@drawable/input_background"
        android:padding="10dp"
        android:fontFamily="@font/exo2regular"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/give_feedback_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110sp"
        android:layout_marginEnd="20dp"
        />

    <RatingBar
        android:id="@+id/ratting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:numStars="5"
        android:stepSize="1"
        android:progressTint="@color/colorPrimary"
        android:rating="3"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/leave_feedback"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/leave_feedback"
        android:padding="10dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textColor="#fff"
        android:textAllCaps="true"
        android:background="@drawable/leave_feedback"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:elevation="2dp" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:alpha=".89"
        android:fontFamily="@font/exobold"
        android:gravity="center"
        android:text="@string/thanks"
        android:layout_centerVertical="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/feedback_advice"
        android:layout_width="190dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/feedback_advice"
        android:fontFamily="@font/exo2regular"
        android:textColor="@color/black"
        android:layout_below="@+id/thanks"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:alpha=".5"
        android:textSize="13sp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"/>

</RelativeLayout>